--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Amazing app to help you find nearest MBTA station</title>
   </head>
   <body>
-      <p>Hi</p>
+      <h1>Finding Closest MBTA Station.</h1>
+
+      <div id="border">
+
+        <form name="MBTAStation" method="POST">
+            <label for="result">Your current location: </label>
+            <input type="text" id="result" name="placeName" value="" />
+            <input type="submit" id="submit" value = "SUBMIT">
+        </form>
+
+      </div>
+
   </body>
 </html>
