--- a/templates/result.html
+++ b/templates/result.html
@@ -13,6 +13,10 @@
         The nearest station from {{placeName}} is {{nearestStation}} and it is
         {{isAccessible}} wheelchair accessible.
       </p>
+      <h2>
+        Below is an easily accessible map for directions.
+      </h2>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11803.49894412586!2d-71.1567342!3d42.302538199999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1668048454473!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </body>
 </html>
